--- a/jsconfig.json
+++ b/jsconfig.json
@@ -5,5 +5,6 @@
         "module": "ESNext",
         "lib": ["ESNext", "DOM"],
         "moduleResolution": "node"
-    }
+    },
+    "exclude": ["build", "node_modules"]
 }
