--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -3,7 +3,7 @@ name: publish-to-github-pages
 on:
     push:
         branches:
-            - main
+            - test-site
 
 permissions:
     contents: read
