--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -27,10 +27,11 @@ jobs:
             - name: Setup Node.js - Cache dependencies - Install dependencies
               uses: ./.github/workflows/setup-node
 
+            - uses: oven-sh/setup-bun@v1
             - name: Build archipelago.js
               run: |
                 cd external/archipelago.js
-                npm install
+                npm ci
                 npm run build
 
             - name: Setup Pages
