Don't clean install

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -31,7 +31,7 @@ jobs:
             - name: Build archipelago.js
               run: |
                 cd external/archipelago.js
-                npm ci
+                npm i
                 npm run build
 
             - name: Setup Pages
